--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -36,11 +36,17 @@
 .textLine {
   display: block;
   font-family: 'stevie-sans', sans-serif;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   white-space: nowrap;
   line-height: 1.1;
   text-align: center;
+}
+
+@media (min-width: 768px) {
+  .textLine {
+    font-size: 40px;
+  }
 }
